fixed new collection visibility issue

--- a/src/Explorer/Panes/PanelComponent.less
+++ b/src/Explorer/Panes/PanelComponent.less
@@ -9,7 +9,7 @@
     flex-grow: 1;
     padding: 0 34px;
     margin: 20px 0;
-    overflow: auto;
+    overflow-x: clip;
 
     & > :not(.collapsibleSection) {
       margin-bottom: @DefaultSpace;
